Create Post Factory/Seeder, Create Post List API, Create Post Fetch API, Create Category Seeder, Create Category List API, Create Brand Seeder, Create Brand List API, Create Order Status Seeder, Create Order Status List API
